--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = kimageformats
 url = https://download.kde.org/stable/frameworks/5.56/kimageformats-5.56.0.tar.xz
 archives = 
-giturl = 
+giturl = https://anongit.kde.org/kimageformats.git
 
 [autospec]
 # build 32 bit libraries
