update giturl to gitlab repo
Signed-off-by: Patrick McCarty <patrick.mccarty@intel.com>

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = kimageformats
 url = https://download.kde.org/stable/frameworks/5.71/kimageformats-5.71.0.tar.xz
 archives = 
-giturl = https://anongit.kde.org/kimageformats.git
+giturl = https://invent.kde.org/frameworks/kimageformats.git
 domain = 
 alias = 
 
